[package]
name = "khan-academy-extractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "khan_academy_extractor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
csv = "1.3.1"
thiserror = "2.0.3"
base64 = "0.22.1"
clap = { version = "4.0.32", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14.0"
